k3s-userapps/media/emby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: emby
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: emby
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: emby
          persistentVolumeClaim:
            claimName: emby
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: dri
          hostPath:
            path: /dev/dri
      containers:
        - image: 'emby/embyserver:4.11.0.4'
          imagePullPolicy: IfNotPresent
          name: emby
          ports:
            - containerPort: 8096
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /config
              name: emby
            - mountPath: /data
              name: video
            - name: dri
              mountPath: /dev/dri
          livenessProbe:
            httpGet:
              path: /emby/system/info/public
              port: 8096
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /emby/system/info/public
              port: 8096
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
