k3s-userapps/media/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: jackett
    spec:
      volumes:
        - name: jackett
          persistentVolumeClaim:
            claimName: jackett
      containers:
        - image: 'ghcr.io/linuxserver/jackett:0.24.2813'
          imagePullPolicy: IfNotPresent
          name: jackett
          ports:
            - containerPort: 9117
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /config
              name: jackett
          livenessProbe:
            httpGet:
              path: /health
              port: 9117
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 9117
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
