k3s-userapps/media/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/pod: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - niflheimr
                      - jotunheimr
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.6
          ports:
            - name: http
              containerPort: 8096
              hostPort: 8096 # Optional: Use with caution in production
          volumeMounts:
            - name: jellyfin
              mountPath: /config
              subPath: config
            - name: video
              mountPath: /cache
              subPath: cache
            - name: video
              mountPath: /video
            - name: dri
              mountPath: /dev/dri
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: dri
          hostPath:
            path: /dev/dri
