k3s-userapps/media/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: jellyseerr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: jellyseerr
          persistentVolumeClaim:
            claimName: jellyseerr
      containers:
        - image: 'ghcr.io/seerr-team/seerr:v3.5.0'
          imagePullPolicy: IfNotPresent
          name: jellyseerr
          ports:
            - containerPort: 80
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
