k3s-userapps/media/mediamanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediamanager
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mediamanager
  template:
    metadata:
      labels:
        app: mediamanager
    spec:
      containers:
        - name: mediamanager
          image: ghcr.io/maxdorninger/mediamanager/mediamanager:dev-2026.02.22-601
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: media
              mountPath: /mnt/media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mediamanager-config
        - name: media
          persistentVolumeClaim:
            claimName: video
