k3s-userapps/media/overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: overseerr
    spec:
      volumes:
        - name: overseerr
          persistentVolumeClaim:
            claimName: overseerr
      containers:
        - image: 'sctx/overseerr:1.33.2'
          imagePullPolicy: IfNotPresent
          name: overseerr
          ports:
            - containerPort: 9117
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /app/config
              name: overseerr
