k3s-userapps/media/plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pod: plex
  template:
    metadata:
      labels:
        pod: plex
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - alfheimr # too weak for plex
      volumes:
        - name: plex
          persistentVolumeClaim:
            claimName: plex
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: transcode
          emptyDir: {}
      containers:
        - image: 'plexinc/pms-docker:1.40.4.8679-424562606'
          imagePullPolicy: IfNotPresent
          name: plex
          ports:
            - containerPort: 32400
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /config
              name: plex
            - mountPath: /transcode
              name: transcode
            - mountPath: /data
              name: video
