k3s-userapps/media/riven.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: riven
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: riven
  template:
    metadata:
      labels:
        app: riven
    spec:
      containers:
        - name: riven
          image: spoked/riven:0.23.6
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /riven/data
            - name: media
              mountPath: /mnt/media
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: riven-data
        - name: media
          persistentVolumeClaim:
            claimName: video
