k3s-userapps/media/samba.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smb-server
  namespace: media
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: smb-server
  template:
    metadata:
      name: smb-server
      labels:
        app.kubernetes.io/name: smb-server
    spec:
      volumes:
        - name: video
          persistentVolumeClaim:
            claimName: video
        - name: seedbox
          persistentVolumeClaim:
            claimName: rclone-seedbox
        - name: config
          configMap:
            name: smb-server
      containers:
        - name: smb-server
          image: dockurr/samba:4.23.10
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /storage/video
              name: video
            - mountPath: /storage/seedbox
              name: seedbox
              # See sonarr.yaml: csi-rclone's FUSE mount can appear after the
              # container bind mount; HostToContainer lets it propagate in.
              mountPropagation: HostToContainer
            - mountPath: /etc/samba/smb.conf
              name: config
              subPath: smb.conf
            - mountPath: /etc/samba/users.conf
              name: config
              subPath: users.conf
          ports:
            - containerPort: 445
          livenessProbe:
            tcpSocket:
              port: 445
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 445
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: smb-server
  namespace: media
  labels:
    app.kubernetes.io/name: smb-server
  annotations:
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.179.250
  ports:
    - port: 445
      targetPort: 445
      protocol: TCP
      name: smb
  selector:
    app.kubernetes.io/name: smb-server
