k3s-userapps/media/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9117
  selector:
    app.kubernetes.io/pod: jackett
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7878
  selector:
    app.kubernetes.io/pod: radarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8989
  selector:
    app.kubernetes.io/pod: sonarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/pod: jellyseerr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8096
  selector:
    app.kubernetes.io/pod: emby
  type: ClusterIP
