k3s-userapps/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://jackett.kirillorlov.pro"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Jackett
    gethomepage.dev/icon: jackett.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=jackett"
    gethomepage.dev/widget.type: "jackett"
    gethomepage.dev/widget.url: "http://jackett.media.svc.cluster.local"
  name: jackett
  namespace: media
spec:
  rules:
  - host: jackett.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: jackett
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jackett.kirillorlov.pro
    secretName: jackett-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://radarr.kirillorlov.pro"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=radarr"
    gethomepage.dev/widget.type: radarr
    gethomepage.dev/widget.url: http://radarr.media.svc.cluster.local
    gethomepage.dev/widget.key: "$RADARR_API_KEY$"
    gethomepage.dev/widget.enableQueue: "false" # optional, defaults to false
    kirillorlov.pro/annotationsFromSecretName: plex-secret
  name: radarr
  namespace: media
spec:
  rules:
  - host: radarr.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.kirillorlov.pro
    secretName: radarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://sonarr.kirillorlov.pro"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/widget.type: sonarr
    gethomepage.dev/widget.url: http://sonarr.media.svc.cluster.local
    gethomepage.dev/widget.enableQueue: "false" # optional, defaults to false
    gethomepage.dev/widget.key: "$SONARR_API_KEY$"
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=sonarr"
    kirillorlov.pro/annotationsFromSecretName: plex-secret
  name: sonarr
  namespace: media
spec:
  rules:
  - host: sonarr.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sonarr.kirillorlov.pro
    secretName: sonarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://jellyseerr.kirillorlov.pro"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Jellyseerr
    gethomepage.dev/icon: jellyseerr.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=jellyseerr"
    gethomepage.dev/widget.type: jellyseerr
    gethomepage.dev/widget.url: http://jellyseerr.media.svc.cluster.local
    gethomepage.dev/widget.key: "$JELLYSEERR_TOKEN$"
    kirillorlov.pro/annotationsFromSecretName: plex-secret
  name: jellyseerr
  namespace: media
spec:
  rules:
  - host: jellyseerr.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: jellyseerr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jellyseerr.kirillorlov.pro
    secretName: jellyseerr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://emby.kirillorlov.pro"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Emby
    gethomepage.dev/icon: emby.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=emby"
  name: emby
  namespace: media
spec:
  rules:
  - host: emby.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: emby
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - emby.kirillorlov.pro
    secretName: emby-tls
